Added functionality for a modal popup that shows message details.

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -4,4 +4,4 @@
 // Bulma
 @import url('https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.css');
 
-@import 'message';
+// @import 'message';
